--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -14,7 +14,7 @@
 	year = {2010},
 	keywords = {attack rate, handling time, per capita consumption rate, body-mass ratio, food webs and predator–prey interactions, hill exponent, metabolic theory, optimal foraging},
 	pages = {249--256},
-	file = {vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:application/pdf},
+	file = {vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:/home/bcr/DATA/Nextcloud/Literature/vucicPesticEtAl_2010_jAnimEcol_101111J13652656200901622X.pdf:application/pdf},
 }
 
 @article{Royama1971ComparativeStudyModels,
@@ -30,7 +30,7 @@
 	month = sep,
 	year = {1971},
 	pages = {1--91},
-	file = {royama_1971_resPopulEcol_101007Bf02511547.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/royama_1971_resPopulEcol_101007Bf02511547.pdf:application/pdf},
+	file = {royama_1971_resPopulEcol_101007Bf02511547.pdf:/home/bcr/DATA/Nextcloud/Literature/royama_1971_resPopulEcol_101007Bf02511547.pdf:application/pdf},
 }
 
 @misc{FitzJohn2024OdinODEGeneration,
@@ -78,9 +78,9 @@
 	journal = {Ecology},
 	author = {Vonesh, James R. and Bolker, Benjamin M.},
 	year = {2005},
-	keywords = {compensatory growth, density-mediated indirect interaction (DMII), functional response, hatching plasticity, Hyperolius spinigularis, multiple predators, phenotypic plasticity, size-selective predation, trait-mediated indirect interaction (TMII)},
+	keywords = {functional response, phenotypic plasticity, compensatory growth, density-mediated indirect interaction (DMII), hatching plasticity, Hyperolius spinigularis, multiple predators, size-selective predation, trait-mediated indirect interaction (TMII)},
 	pages = {1580--1591},
-	file = {04-0535.html:/home/bcr/DATA/Dropbox/Science/Literatur/04-0535.html:text/html},
+	file = {04-0535.html:/home/bcr/DATA/Nextcloud/Literature/04-0535.html:text/html},
 }
 
 @misc{PritchardEtAl2017FrairToolsFunctional,
@@ -91,7 +91,7 @@
 	author = {Pritchard, Daniel W. and Barrios-O'Neill, Daniel and Bovy, Helene C. and Paterson, Rachel A.},
 	month = mar,
 	year = {2017},
-	file = {pritchardEtAl_2017_computerprogram_frairToolsForFunctionalResponseAna_V05100.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/pritchardEtAl_2017_computerprogram_frairToolsForFunctionalResponseAna_V05100.pdf:application/pdf},
+	file = {pritchardEtAl_2017_computerprogram_frairToolsForFunctionalResponseAna_V05100.pdf:/home/bcr/DATA/Nextcloud/Literature/pritchardEtAl_2017_computerprogram_frairToolsForFunctionalResponseAna_V05100.pdf:application/pdf},
 }
 
 @book{Crawley2012Book,
@@ -104,7 +104,7 @@
 	publisher = {Wiley},
 	author = {Crawley, Michael J.},
 	year = {2012},
-	file = {crawley_2012_book_theRBook.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/crawley_2012_book_theRBook.pdf:application/pdf},
+	file = {crawley_2012_book_theRBook.pdf:/home/bcr/DATA/Nextcloud/Literature/crawley_2012_book_theRBook.pdf:application/pdf},
 }
 
 @article{CorlessEtAl1996LambertWFunction,
@@ -121,7 +121,7 @@
 	month = dec,
 	year = {1996},
 	pages = {329--359},
-	file = {corlessEtAl_1996_advComputMath_101007Bf02124750.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/corlessEtAl_1996_advComputMath_101007Bf02124750.pdf:application/pdf},
+	file = {corlessEtAl_1996_advComputMath_101007Bf02124750.pdf:/home/bcr/DATA/Nextcloud/Literature/corlessEtAl_1996_advComputMath_101007Bf02124750.pdf:application/pdf},
 }
 
 @book{Bolker2008EcologicalModelsData,
@@ -133,7 +133,7 @@
 	publisher = {Princeton University Press},
 	author = {Bolker, Benjamin M.},
 	year = {2008},
-	file = {bolker_2008_book_ecologicalModelsAndDataInR.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/bolker_2008_book_ecologicalModelsAndDataInR.pdf:application/pdf},
+	file = {bolker_2008_book_ecologicalModelsAndDataInR.pdf:/home/bcr/DATA/Nextcloud/Literature/bolker_2008_book_ecologicalModelsAndDataInR.pdf:application/pdf},
 }
 
 @incollection{Juliano2001NonlinearCurveFitting,
@@ -149,7 +149,7 @@
 	year = {2001},
 	note = {DOI (e-Book): https://doi.org/10.1201/9781003059813},
 	pages = {178--196},
-	file = {juliano_2001_booksection_nonlinearCurveFittingPredationAndF.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/juliano_2001_booksection_nonlinearCurveFittingPredationAndF.pdf:application/pdf},
+	file = {juliano_2001_booksection_nonlinearCurveFittingPredationAndF.pdf:/home/bcr/DATA/Nextcloud/Literature/juliano_2001_booksection_nonlinearCurveFittingPredationAndF.pdf:application/pdf},
 }
 
 @book{JagerAshauer2018ModellingSurvivalChemical,
@@ -162,7 +162,7 @@
 	author = {Jager, Tjalling and Ashauer, Roman},
 	month = dec,
 	year = {2018},
-	file = {jagerAndAshauer_2018_book_modellingSurvivalUnderChemicalStress.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/jagerAndAshauer_2018_book_modellingSurvivalUnderChemicalStress.pdf:application/pdf},
+	file = {jagerAndAshauer_2018_book_modellingSurvivalUnderChemicalStress.pdf:/home/bcr/DATA/Nextcloud/Literature/jagerAndAshauer_2018_book_modellingSurvivalUnderChemicalStress.pdf:application/pdf},
 }
 
 @article{Holling1959ComponentsPredationRevealed,
@@ -179,7 +179,7 @@
 	month = may,
 	year = {1959},
 	pages = {293--320},
-	file = {holling_1959_canEntomol_104039Ent912935.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/holling_1959_canEntomol_104039Ent912935.pdf:application/pdf},
+	file = {holling_1959_canEntomol_104039Ent912935.pdf:/home/bcr/DATA/Nextcloud/Literature/holling_1959_canEntomol_104039Ent912935.pdf:application/pdf},
 }
 
 @article{Holling1959CharacteristicsSimpleTypes,
@@ -195,7 +195,7 @@
 	month = jul,
 	year = {1959},
 	pages = {385--398},
-	file = {holling_1959_canEntomol_104039Ent913857.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/holling_1959_canEntomol_104039Ent913857.pdf:application/pdf},
+	file = {holling_1959_canEntomol_104039Ent913857.pdf:/home/bcr/DATA/Nextcloud/Literature/holling_1959_canEntomol_104039Ent913857.pdf:application/pdf},
 }
 
 @article{WilliamsMartinez2004StabilizationChaoticNonpermanent,
@@ -212,7 +212,7 @@
 	month = mar,
 	year = {2004},
 	pages = {297--303},
-	file = {williamsAndMartinez_2004_eurPhysJB_101140EpjbE2004001221.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/williamsAndMartinez_2004_eurPhysJB_101140EpjbE2004001221.pdf:application/pdf},
+	file = {williamsAndMartinez_2004_eurPhysJB_101140EpjbE2004001221.pdf:/home/bcr/DATA/Nextcloud/Literature/williamsAndMartinez_2004_eurPhysJB_101140EpjbE2004001221.pdf:application/pdf},
 }
 
 @misc{MicrosoftWeston2022ForeachProvidesForeach,
@@ -225,7 +225,7 @@
 	month = feb,
 	year = {2022},
 	keywords = {HighPerformanceComputing},
-	file = {microsoftAndWeston_2022_computerprogram_foreachProvidesForeachLoopingConstr_V152.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/microsoftAndWeston_2022_computerprogram_foreachProvidesForeachLoopingConstr_V152.pdf:application/pdf},
+	file = {microsoftAndWeston_2022_computerprogram_foreachProvidesForeachLoopingConstr_V152.pdf:/home/bcr/DATA/Nextcloud/Literature/microsoftAndWeston_2022_computerprogram_foreachProvidesForeachLoopingConstr_V152.pdf:application/pdf},
 }
 
 @article{RosenbaumRall2018FittingFunctionalResponses,
@@ -241,7 +241,7 @@
 	month = oct,
 	year = {2018},
 	pages = {2076--2090},
-	file = {rosenbaumAndRall_2018_methodsEcolEvol_1011112041210x13039.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/rosenbaumAndRall_2018_methodsEcolEvol_1011112041210x13039.pdf:application/pdf},
+	file = {rosenbaumAndRall_2018_methodsEcolEvol_1011112041210x13039.pdf:/home/bcr/DATA/Nextcloud/Literature/rosenbaumAndRall_2018_methodsEcolEvol_1011112041210x13039.pdf:application/pdf},
 }
 
 @article{Rogers1972RandomSearchInsect,
@@ -257,7 +257,7 @@
 	month = jun,
 	year = {1972},
 	pages = {369--383},
-	file = {rogers_1972_jAnimEcol_1023073474.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/rogers_1972_jAnimEcol_1023073474.pdf:application/pdf},
+	file = {rogers_1972_jAnimEcol_1023073474.pdf:/home/bcr/DATA/Nextcloud/Literature/rogers_1972_jAnimEcol_1023073474.pdf:application/pdf},
 }
 
 @article{Real1979EcologicalDeterminantsFunctional,
@@ -274,7 +274,7 @@
 	author = {Real, Leslie A.},
 	year = {1979},
 	pages = {481--485},
-	file = {real_1979_ecology_1023071936067.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/real_1979_ecology_1023071936067.pdf:application/pdf},
+	file = {real_1979_ecology_1023071936067.pdf:/home/bcr/DATA/Nextcloud/Literature/real_1979_ecology_1023071936067.pdf:application/pdf},
 }
 
 @article{Real1977KineticsFunctionalResponse,
@@ -288,7 +288,7 @@
 	author = {Real, Leslie A.},
 	year = {1977},
 	pages = {289--300},
-	file = {real_1977_amNat_101086283161.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/real_1977_amNat_101086283161.pdf:application/pdf},
+	file = {real_1977_amNat_101086283161.pdf:/home/bcr/DATA/Nextcloud/Literature/real_1977_amNat_101086283161.pdf:application/pdf},
 }
 
 @article{PritchardEtAl2017FrairPackageFitting,
@@ -304,7 +304,7 @@
 	year = {2017},
 	keywords = {predator–prey, maximum likelihood, bootstrapping, consumer-resource interactions, nonlinear curve fitting, resource use},
 	pages = {1528--1534},
-	file = {pritchardEtAl_2017_methodsEcolEvol_1011112041210x12784.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/pritchardEtAl_2017_methodsEcolEvol_1011112041210x12784.pdf:application/pdf},
+	file = {pritchardEtAl_2017_methodsEcolEvol_1011112041210x12784.pdf:/home/bcr/DATA/Nextcloud/Literature/pritchardEtAl_2017_methodsEcolEvol_1011112041210x12784.pdf:application/pdf},
 }
 
 @misc{WickhamEtAl2024Roxygen2InLineDocumentation,
@@ -349,7 +349,7 @@
 	author = {Flores, Lorea and Reiss, Julia and Larrañaga, Aitor and Rall, Björn Christian and Aranbarri, Mireia and Guzmán, Ioar de},
 	month = feb,
 	year = {2025},
-	file = {floresEtAl_2025_dataset_zenodo_105281Zenodo14891980.csv:/home/bcr/DATA/Dropbox/Science/Literatur/floresEtAl_2025_dataset_zenodo_105281Zenodo14891980.csv:text/csv},
+	file = {floresEtAl_2025_dataset_zenodo_105281Zenodo14891980.csv:/home/bcr/DATA/Nextcloud/Literature/floresEtAl_2025_dataset_zenodo_105281Zenodo14891980.csv:text/csv},
 }
 
 @misc{Zhu2024KableExtraConstructComplex,
@@ -394,11 +394,14 @@
 
 @misc{AranbarriEtAl2025ComplexityReducesFeeding,
 	title = {Habitat complexity reduces feeding strength of freshwater predators},
+	url = {https://doi.org/10.1101/2025.02.22.639633},
+	doi = {10.1101/2025.02.22.639633},
+	language = {en},
 	publisher = {bioRχiv},
 	author = {Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Elosegi, Arturo and Rall, Björn Christian and Reiss, Julia},
 	month = feb,
 	year = {2025},
-	file = {aranbarriEtAl_2025_biorIv_.pdf:/home/bcr/DATA/Dropbox/Science/Literatur/aranbarriEtAl_2025_biorIv_.pdf:application/pdf},
+	file = {aranbarriEtAl_2025_biorIv_.pdf:/home/bcr/DATA/Nextcloud/Literature/aranbarriEtAl_2025_biorIv_.pdf:application/pdf},
 }
 
 @misc{Xie2024KnitrGeneralpurposePackage,
@@ -406,4 +409,16 @@
 	url = {https://yihui.org/knitr/},
 	author = {Xie, Yihui},
 	year = {2024},
+}
+
+@misc{RipleyEtAl2025MASSSupportFunctions,
+	title = {{MASS}: {Support} {Functions} and {Datasets} for {Venables} and {Ripley}'s {MASS}},
+	copyright = {GPL-2 {\textbar} GPL-3},
+	shorttitle = {{MASS}},
+	url = {https://doi.org/10.32614/CRAN.package.MASS},
+	abstract = {Functions and datasets to support Venables and Ripley, "Modern Applied Statistics with S" (4th edition, 2002).},
+	author = {Ripley, Brian and Venables, Bill and Bates, Douglas M. and Hornik, Kurt and Gebhardt, Albrecht and Firth, David},
+	month = feb,
+	year = {2025},
+	keywords = {Distributions, Econometrics, Environmetrics, MixedModels, NumericalMathematics, Psychometrics, Robust, TeachingStatistics},
 }
