--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -397,7 +397,7 @@
 	url = {https://doi.org/10.1101/2025.02.22.639633},
 	doi = {10.1101/2025.02.22.639633},
 	language = {en},
-	publisher = {bioRχiv},
+	publisher = {bioRxiv},
 	author = {Aranbarri, Mireia and Flores, Lorea and de Guzmán, Ioar and Larrañaga, Aitor and Elosegi, Arturo and Rall, Björn Christian and Reiss, Julia},
 	month = feb,
 	year = {2025},
