--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -101,23 +101,6 @@
   howpublished = {CRAN}
 }
 
-@article{FloresEtAl2016HabitatComplexityAquatic,
-  title = {Habitat Complexity in Aquatic Microcosms Affects Processes Driven by Detritivores},
-  author = {Flores, Lorea and Bailey, R. A. and Elosegi, Arturo and Larra{\~n}aga, Aitor and Reiss, Julia},
-  year = {2016},
-  month = nov,
-  journal = {PLOS One},
-  volume = {11},
-  number = {11},
-  pages = {e0165065},
-  issn = {1932-6203},
-  doi = {10.1371/journal.pone.0165065},
-  url = {https://doi.org/10.1371/journal.pone.0165065},
-  copyright = {CC BY 4.0},
-  langid = {english},
-  keywords = {Biodiversity,Ecosystem functioning,Ecosystems,Forecasting,Fractals,Habitats,Leaves,Species interactions}
-}
-
 @misc{FloresEtAl2025ComplexityReducesFeedingData,
   title = {Habitat Complexity Reduces Feeding Strength of Freshwater Predators ({{CRITTER}}) --- {{Data}}},
   author = {Flores, Lorea and Reiss, Julia and Larra{\~n}aga, Aitor and Rall, Bj{\"o}rn Christian and Aranbarri, Mireia and de Guzm{\'a}n, Ioar},
@@ -324,8 +307,20 @@
   langid = {english}
 }
 
+@misc{TempleLang2025RCurlGeneralNetwork,
+  title = {{{RCurl}}: General Network ({{HTTP}}/{{FTP}}/...) Client Interface for {{R}}},
+  shorttitle = {{{RCurl}}},
+  author = {Temple Lang, Duncan},
+  year = {2025},
+  month = mar,
+  url = {https://doi.org/	10.32614/CRAN.package.RCurl},
+  copyright = {BSD\_3\_clause + file LICENSE},
+  howpublished = {CRAN},
+  keywords = {WebTechnologies}
+}
+
 @misc{Urbanek2022PngReadWrite,
-  title = {{{png}}: {{Read}} and Write {{PNG}} Images},
+  title = {{{png}}: Read and Write {{PNG}} Images},
   author = {Urbanek, Simon},
   year = {2022},
   month = nov,
