--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -189,7 +189,7 @@
 }
 
 @article{PritchardEtAl2017FrairPackageFitting,
-  title = {Frair: An {{R}} Package for Fitting and Comparing Consumer Functional Responses},
+  title = {{{frair}}: An {{R}} Package for Fitting and Comparing Consumer Functional Responses},
   author = {Pritchard, Daniel W. and Paterson, Rachel A. and Bovy, Helene C. and {Barrios-O'Neill}, Daniel},
   year = {2017},
   journal = {Methods in Ecology and Evolution},
@@ -313,7 +313,7 @@
   author = {Temple Lang, Duncan},
   year = {2025},
   month = mar,
-  url = {https://doi.org/	10.32614/CRAN.package.RCurl},
+  url = {https://doi.org/10.32614/CRAN.package.RCurl},
   copyright = {BSD\_3\_clause + file LICENSE},
   howpublished = {CRAN},
   keywords = {WebTechnologies}
