--- a/README.Rmd
+++ b/README.Rmd
@@ -2,12 +2,15 @@
 title: "Habitat *c*omplexity *r*educes feed*i*ng s*t*reng*t*h of fr*e*shwater p*r*edators (CRITTER) — Code"
 bibliography: references/CRITTERcode.bib
 csl: "https://raw.githubusercontent.com/citation-style-language/styles/refs/heads/master/dependent/journal-of-animal-ecology.csl"
-date: "`r Sys.Date()`"
+# date: "`r Sys.Date()`"
 output: github_document
 editor_options: 
   markdown: 
     wrap: sentence
 ---
+
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.15346225.svg)](https://doi.org/10.5281/zenodo.15346225)
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -17,8 +20,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This code is supplementing our preprint article by @AranbarriEtAl2025ComplexityReducesFeeding investigating the effect of habitat complexity on the feeding functional response of two freshwater invertebrate predators. Find below information on related works.
 
-**Note that this code is still under construction!**
-
 ## License
 
 This code is published under a [**GNU General Public License 3**](https://www.gnu.org/licenses/gpl-3.0.html).
@@ -27,9 +28,15 @@ This code is published under a [**GNU General Public License 3**](https://www.gn
 
 If you use our code, please cite us:
 
-Rall et al. (2025): Habitat complexity reduces feeding strength of freshwater predators (CRITTER) - Code.
-Zenodo.
-<https://doi.org/10.5281/zenodo.14894598>
+Rall, B.C., Aranbarri, M., Flores, L., de Guzmán, I., Larrañaga, A., and Reiss, J. (2025): Habitat complexity reduces feeding strength of freshwater predators (CRITTER) — Code. Zenodo. https://doi.org/10.5281/zenodo.14894598
+
+Specific version(s):
+
+Rall, B.C., Aranbarri, M., Flores, L., de Guzmán, I., Larrañaga, A., and Reiss, J. (2025): Habitat complexity reduces feeding strength of freshwater predators (CRITTER) — Code (v0.1.2). Zenodo. https://doi.org/10.5281/zenodo.15346225
+
+Rall, B.C., Aranbarri, M., Flores, L., de Guzmán, I., Larrañaga, A., and Reiss, J. (2025): Complexity reduces feeding strength of freshwater predators (CRITTER) - Code (v0.1.1). Zenodo. https://doi.org/10.5281/zenodo.14907486
+
+Rall, B.C., Aranbarri, M., Flores, L., de Guzmán, I., Larrañaga, A., and Reiss, J. (2025): Complexity reduces feeding strength of freshwater predators (CRITTER) - Code (v0.1.0). Zenodo. https://doi.org/10.5281/zenodo.14894599
 
 ## Authors
 
@@ -43,8 +50,8 @@ Zenodo.
     -   [lflorescompains\@gmail.com](mailto:lflorescompains@gmail.com)
     -   Laboratory of Stream Ecology, Department of Plant Biology and Ecology, Faculty of Science and Technology, University of the Basque Country, UPV/EHU PO Box 644, 48080 Bilbao, Spain
 -   Ioar de Guzmán ([0000-0001-8894-8477](https://orcid.org/0000-0001-8894-8477))
-    -   [mirenioar.deguzman\@ehu.eus](mailto:mirenioar.deguzman@ehu.eus)
-    -   Laboratory of Stream Ecology, Department of Plant Biology and Ecology, Faculty of Science and Technology, University of the Basque Country, UPV/EHU PO Box 644, 48080 Bilbao, Spain
+    -   [mirenioar.deguzman@ehu.eus](mailto:mirenioar.deguzman@ehu.eus)
+    -   Laboratory of Stream Ecology, Dept. of Plant Biology and Ecology, Faculty of Science and Technology, University of the Basque Country, UPV/EHU PO Box 644, 48080 Bilbao, Spain.
     -   INRAE, UMR 1224, Ecologie Comportementale et Biologie des Populations de Poissons, Aquapôle, quartier Ibarron, 64310 Saint-Pée sur Nivelle, France.
 -   Aitor Larrañaga ([0000-0002-0185-9154](https://orcid.org/0000-0002-0185-9154))
     -   [aitor.larranagaa\@ehu.eus](mailto:aitor.larranagaa@ehu.eus)
@@ -61,11 +68,11 @@ Zenodo.
 
 -   [R-Code on Zenodo](https://doi.org/10.5281/zenodo.14894598) [@RallEtAl2025ComplexityReducesFeedingCode]
 
--   [R-Code on GitHub](https://github.com/b-c-r/CRITTERdata)
+-   [R-Code on GitHub](https://github.com/b-c-r/CRITTERcode)
 
--   [Statistical Report on Zenodo](https://doi.org/10.5281/zenodo.14898819) [@RallEtAl2025ComplexityReducesFeedingStatistics]
+-   [Supplemental Statistics Report on Zenodo](https://doi.org/10.5281/zenodo.14898819) [@RallEtAl2025ComplexityReducesFeedingStatistics]
 
--   [Statistical Report on GitHub](https://github.com/b-c-r/CRITTERstatistics)
+-   [Supplemental Statistics Report on GitHub](https://github.com/b-c-r/CRITTERstatistics)
 
 -   [Scientific Preprint Article](https://doi.org/10.1101/2025.02.22.639633) [@AranbarriEtAl2025ComplexityReducesFeeding]
 
@@ -190,7 +197,7 @@ if(q < q_low){
 
 ***Description***:
 
-**`gen_fr_parms_scan`** creates Latin hypercube samples for the functional response parameters in a reasonable range and calculates the according negative log-likelihood values. It returns the parameter values with the lowest negative log likelihood of these samples. Non-linear maximum likelihood fitting procedures require starting parameters, generally based on an educated guess [@Bolker2008EcologicalModelsData]. Moreover, these fits may end up in local best fits, and users should re-fit the data using different starting parameters [@Bolker2008EcologicalModelsData]. To overcome manually eyeballing as well as re-shuffling the starting parameters, @JagerAshauer2018ModellingSurvivalChemical suggested creating samples in a reasonable parameter range using and choosing the starting parameters (from the lowest nll value) from these samples. To reduce the number of required samples by keeping the variance of parameter values as wide as possible, it is recommended to use Latin hypercube sampling. `gen_fr_parms_scan` requires the lhs package [@Carnell2024LhsLatinHypercubea]. See also the description of [gen_fr_nll] for further information.
+**`gen_fr_parms_scan`** creates Latin hypercube samples for the functional response parameters in a reasonable range and calculates the according negative log-likelihood values. It returns the parameter values with the lowest negative log likelihood of these samples. Non-linear maximum likelihood fitting procedures require starting parameters, generally based on an educated guess [@Bolker2008EcologicalModelsData]. Moreover, these fits may end up in local best fits, and users should re-fit the data using different starting parameters [@Bolker2008EcologicalModelsData]. To overcome manually eyeballing as well as re-shuffling the starting parameters, @JagerAshauer2018ModellingSurvivalChemical suggested creating samples in a reasonable parameter range using and choosing the starting parameters (from the lowest nll value) from these samples. To reduce the number of required samples by keeping the variance of parameter values as wide as possible, it is recommended to use Latin Hypercube sampling. `gen_fr_parms_scan` requires the lhs package [@Carnell2024LhsLatinHypercubea]. See also the description of `gen_fr_nll` for further information.
 
 ***Parameters***:
 
@@ -218,7 +225,7 @@ if(q < q_low){
 
 ***Description***:
 
-**`gen_fr_fit`** automatically fits the generalized functional response model [@Real1977KineticsFunctionalResponse; @RosenbaumRall2018FittingFunctionalResponses] to data. In the simplest case, you only need to provide the number of resources eaten (count data) and the initial resource density (count data): the function does the rest, including initial parameter value guessing. See the parameters section and the code example for more options. If your experiment ran a day, but you want to have the maximum feeding rate on an hourly basis, you can enter t_end = 24. See also the description of `gen_fr_nll` and [gen_fr_parms_scan] for further information.
+**`gen_fr_fit`** automatically fits the generalized functional response model [@Real1977KineticsFunctionalResponse; @RosenbaumRall2018FittingFunctionalResponses] to data. In the simplest case, you only need to provide the number of resources eaten (count data) and the initial resource density (count data): the function does the rest, including initial parameter value guessing. See the parameters section and the code example for more options. If your experiment ran a day, but you want to have the maximum feeding rate on an hourly basis, you can enter t_end = 24. See also the description of `gen_fr_nll` and `gen_fr_parms_scan` for further information.
 
 ***Parameters***:
 
@@ -757,13 +764,13 @@ In addition, it also calculates the confidence intervals using the *population p
 
 ***Parameters***:
 
-- `fmax`: maximum feeding rate for example plots. Default = 20.
-- `nhalf`: half saturation density for example plots. Default = 50.
-- `q`: q values for gen FR examples plot. Default = c(0, 0.2, 0.5, 1).
-- `maxN`: maximum prey density. Default = 200.
-- `xres`: number of x-axis values. Default = 1000.
-- `ylim`: y-axis limits. Default = c(0, 30).
-- `xlim`: x-axis limits. Default = c(0, 200).
+- `fmax`: maximum feeding rate for example plots. Default = `20`.
+- `nhalf`: half saturation density for example plots. Default = `50`.
+- `q`: q values for gen FR examples plot. Default = `c(0, 0.2, 0.5, 1)`.
+- `maxN`: maximum prey density. Default = `200`.
+- `xres`: number of x-axis values. Default = `1000`.
+- `ylim`: y-axis limits. Default = `c(0, 30)`.
+- `xlim`: x-axis limits. Default = `c(0, 200)`.
 - `journal_style`: Should be the specific journal style be applied? Default = `FALSE`.
 
 ***Required packages***:
