--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ Rall, B.C., Aranbarri, M., Flores, L., de Guzmán, I., Larrañaga, A., and Reiss
 
 -   Björn C. Rall ([0000-0002-3191-8389](https://orcid.org/0000-0002-3191-8389))
     -   [bjoern.rall\@uni-konstanz.de](mailto:bjoern.rall@uni-konstanz.de)
-    -   Aquatic Ecology and Evolution Group, Limnological Institute, University of Konstanz, Mainaustraße 252, 78464 Konstanz/Egg, Germany
+    -   Aquatic Ecology and Evolution, Department of Biology, University of Konstanz, Universitätsstraße 10, 78464 Konstanz, Germany
 -   Mireia Aranbarri ([0009-0001-3506-0914](https://orcid.org/0009-0001-3506-0914))
     -   [mireia.arambarri\@ehu.eus](mailto:mireia.arambarri@ehu.eus)
     -   Laboratory of Stream Ecology, Department of Plant Biology and Ecology, Faculty of Science and Technology, University of the Basque Country, UPV/EHU PO Box 644, 48080 Bilbao, Spain
