--- a/references/CRITTERcode.bib
+++ b/references/CRITTERcode.bib
@@ -166,6 +166,14 @@
   langid = {english}
 }
 
+@misc{MicrosoftWeston2022DoParallelForeachParallel,
+  title = {{{doParallel}}: Foreach Parallel Adaptor for the 'parallel' Package},
+  author = {{Microsoft} and Weston, Steve},
+  year = {2022},
+  url = {https://CRAN.R-project.org/package=doParallel},
+  howpublished = {CRAN}
+}
+
 @misc{MicrosoftWeston2022ForeachProvidesForeach,
   title = {{{foreach}}: Provides Foreach Looping Construct},
   author = {{Microsoft} and Weston, Steve},
